# ecommerce-sales-databricks

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
data/: README.md
docs/: data_design.md  source_profile.md  test_strategy.md
notebooks/: 00_setup.py  01_raw_ingestion.py  02_build_silver.py  02_transform_enrich_aggregate.py  03_build_gold.py  05_run_tests.py
reports/: full_data_validation.txt  pytest_report.txt
sql/: profit_queries.sql
src/ecommerce_pipeline/: __init__.py  io.py  schemas.py  transformations.py  validation.py
tests/: conftest.py  test_aggregations.py  test_customers.py  test_enrichment.py  test_orders.py  test_products.py  test_validation.py
